<resources>
    <string name="app_name">Reddit Client</string>

    <string name="posted_by">Posted by:</string>
    <string name="date">Date:</string>
    <string name="comments">Comments</string>
    <string name="page">Page</string>
    <string name="comments_detailed">Comments:</string>
</resources>
